...
  String get readerCopy => 'Copy';

  @override
  String get readerSelectionCancel => 'Cancel';

  @override
  String get readerHighlightYellow => 'Yellow';

  @override
  String get readerHighlightGreen => 'Green';

  @override
  String get readerHighlightBlue => 'Blue';
...
